# bert-serving-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  launch-in-docker
doc/: bert_embedding_service.md  bert_ner_service.md  bert_reranking_service.md  bert_sequence_classification_service.md
notebooks/: Dockerfile  convert_model.ipynb  reranking_test_rust.ipynb  reranking_tests.ipynb  reranking_tests.py  run-notebook  text_to_image.ipynb
notebooks/.ipynb_checkpoints/: convert_model-checkpoint.ipynb
notebooks/convert/: Dockerfile  converter
src/: lib.rs
src/bert/: bert_embedding_model.rs  mod.rs
src/bert/bert_ner/: builder.rs  mod.rs  model.rs  spans.rs
src/bert/bert_reranking/: bert_reranking_model.rs  builder.rs  mod.rs  model.rs
src/bert/bert_sequence_classification/: builder.rs  mod.rs  model.rs
src/services/: bert_embedding_service.rs  bert_ner_service.rs  bert_reranking_service.rs  bert_sequence_classification_service.rs  mod.rs  ping.rs
