[package]
name = "bert_serving_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.13.0"
rust-bert = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0"
actix-web = "4"
log = "0.4.20"
env_logger = "0.10.0"

[[bin]]
name = "bert_embedding_service"
doc = false

[[bin]]
name = "bert_ner_service"
doc = false