[package]
name = "bert_serving_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.17.0"
rust-bert = "0.23.0"
rust_tokenizers = "8.1.1"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0"
actix-web = "4"
log = "0.4.20"
env_logger = "0.10.0"
rayon = "1.10"

[[bin]]
name = "bert_embedding_service"
doc = false

[[bin]]
name = "bert_ner_service"
doc = false

[[bin]]
name = "bert_sequence_classification_service"
doc = false